--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,11 +14,18 @@
             <button class="btn btn-outline-info" type="submit">Sign up</button>
         </div>
         </form>
-
+        {% load socialaccount %}
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Sign in With Googel!<a class="ml-2" href="{% provider_login_url 'google' %}"> Sign in</a>
+            </small>
+        </div>
+        
         <div class="border-top pt-3">
             <small class="text-muted">
                 Already have an account?<a class="ml-2" href="#"> Sign in</a>
             </small>
         </div>
+
     </div>
 {% endblock content %}
